--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
+include ':spotify-auth-lib'
 include ':retrofit-2.9.0'
-include ':spotify-app-remote'
 include ':app'
 rootProject.name = "BlindTify"
