--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.spotify.android:auth:1.2.3'
     implementation project(':spotify-remote-lib')
-    implementation "com.google.code.gson:gson:2.6.1"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
